--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ repository: CycloneTechnology/CycloneTechnology.github.io
 output: web
 # this property is useful for conditional filtering of content that is separate from the PDF.
 
-topnav_title: Cyclone Technology Product Documentation
+topnav_title: Cyclone Technology Product Docs
 # this appears on the top navigation bar next to the home button
 
-site_title: Cyclone Technology Product Documentation
+site_title: Cyclone Technology Product Docs
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
 company_name: Cyclone Technology Ltd
@@ -29,7 +29,7 @@ exclude:
   - .gitignore
 # these are the files and directories that jekyll will exclude from the build
 
-feedback_subject_line: Cyclone Technology Product Documentation
+feedback_subject_line: Cyclone Technology Product Docs
 
 feedback_email: support@cyclone-technology.com
 # used as a contact email for the Feedback link in the top navigation bar
@@ -99,7 +99,7 @@ sidebars:
 - product2_sidebar
 - other
 
-description: "Cyclone Technology Product Documentation."
+description: "Cyclone Technology Product Docs."
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
