--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -23,7 +23,7 @@ topnav_dropdowns:
 #        - title: Jekyll on my blog
 #          external_url: http://idratherbewriting.com/category-jekyll/
     - title: Products
-      folders
+      folders:
         - title: IPMI Library
           url: /ipmi_landing_page.html
         - title: netPrefect
